async createNode